# behave-model

./: .gitignore  CHANGELOG.md  Makefile  README.md  conftest.py  mkdocs.yml  pyproject.toml  tox.ini
.github/workflows/: ci.yml  docs.yml  release.yml
behave_model/: __init__.py  exceptions.py
behave_model/model/: __init__.py  background.py  comment.py  docstring.py  examples.py  feature.py  location.py  metadata.py  project.py  rule.py  scenario.py  scenario_outline.py  step.py  table.py  tag.py
behave_model/parser/: __init__.py  adapter.py  loader.py  parser.py
behave_model/queries/: __init__.py  query.py
behave_model/serializers/: __init__.py  dict_serializer.py  json_serializer.py  pretty_printer.py
behave_model/transformations/: __init__.py  transform.py
behave_model/utils/: __init__.py  utils.py
behave_model/validation/: __init__.py  validator.py
behave_model/visitors/: __init__.py  visitor.py
docs/: api_reference.md  architecture.md  changelog.md  contributing.md  design_decisions.md  examples.md  index.md  quick_start.md
docs/api/: exceptions.md  model.md  overview.md  parser.md  serializers.md  transformations.md  validation.md  visitors.md
docs/assets/: extra.css
docs/getting-started/: first_project.md  installation.md  quick_start.md
docs/guides/: domain_model.md  queries.md  rules.md  serializers.md  statistics.md  transformations.md  validation.md  visitors.md
examples/: data_tables.feature  login.feature  rules.feature  shopping_cart.feature
tests/: conftest.py  test_exceptions.py  test_golden.py  test_model.py  test_parser.py  test_query.py  test_rules.py  test_serialization.py  test_statistics.py  test_transformation.py  test_validation.py  test_visitor.py
