[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "behave-model"
version = "1.0.0"
description = "Canonical object model for Behave projects"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Mathias Paulenko" },
]
keywords = ["behave", "bdd", "cucumber", "gherkin", "model", "domain", "testing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "behave>=1.2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
]

[project.urls]
Homepage = "https://github.com/MathiasPaulenko/behave-model"
Repository = "https://github.com/MathiasPaulenko/behave-model"
Issues = "https://github.com/MathiasPaulenko/behave-model/issues"
Documentation = "https://mathiaspaulenko.github.io/behave-model/"
Changelog = "https://github.com/MathiasPaulenko/behave-model/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["behave_model"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["behave_model"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.coverage.run]
source = ["behave_model"]
omit = ["*/tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 90
